--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/tabs/tabs.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/tabs/tabs.component.html
@@ -2,22 +2,22 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="dashboard">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
+      <ion-icon name="cube-outline"></ion-icon>
       <ion-label>Dashboard</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="termin">
-      <ion-icon aria-hidden="true" name="images"></ion-icon>
+      <ion-icon name="calendar-outline"></ion-icon>
       <ion-label>Termine</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="mitglieder">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
+      <ion-icon name="people-outline"></ion-icon>
       <ion-label>Mitglieder</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="anwesenheit">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
+      <ion-icon name="bar-chart-outline"></ion-icon>
       <ion-label>Anwesenheit</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
