--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/mitglieder/components/container/mitglieder-details/mitglieder-details.component.scss
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/mitglieder/components/container/mitglieder-details/mitglieder-details.component.scss
@@ -10,3 +10,14 @@
 .mg-top{
   margin-top: 16px;
 }
+
+.profil-img{
+  width: 50px;
+  height: 50px;
+}
+
+.border-top{
+  margin-top: 8px;
+  padding-top: 8px;
+  border-top: 1px solid #ffffff1c;
+}
