--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-return-message-details/termin-return-message-details.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-return-message-details/termin-return-message-details.component.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-button (click)="cancel()">Zurück</ion-button>
     </ion-buttons>
-    <ion-title>Termin Rückmeldung Details</ion-title>
+    <ion-title>Rückmeldung</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="confirm()" [strong]="true"
         [disabled]="!formGroup.dirty || formGroup.invalid">Speichern</ion-button>
@@ -14,7 +14,7 @@
 <ion-content [fullscreen]="true" class="ion-padding">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Termin Rückmeldung Details</ion-title>
+      <ion-title size="large">Rückmeldung</ion-title>
     </ion-toolbar>
   </ion-header>
 
