--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/side-menu/side-menu.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/side-menu/side-menu.component.html
@@ -1,4 +1,24 @@
 <ion-list>
+
+  <ion-item [button]="true" detail="false">
+    <ion-avatar aria-hidden="true" slot="start">
+      <img alt="" [src]="authService.userImage ? 'data:image/png;base64,' + authService.userImage : '/assets/avatar.svg'"/>
+    </ion-avatar>
+    <ion-label>
+      <h2>
+        <strong>{{authService.connectedOrchesterMitgliedsName}}</strong>
+      </h2>
+      <ion-text style="font-size: 14px;">{{authService.userEmail}}</ion-text><br />
+      <ion-note color="medium" class="ion-text-wrap">
+      </ion-note>
+      <ng-template #memberSinceUnknown>
+        <ion-note color="medium" class="ion-text-wrap">
+          Mitglied seit: unbekannt
+        </ion-note>
+      </ng-template>
+    </ion-label>
+  </ion-item>
+
   <div class="user-info">
     <div class="user-name">{{authService.connectedOrchesterMitgliedsName}}</div>
     <div class="user-mail">{{authService.userEmail}}</div>
