--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/dashboard/components/container/dashboard/dashboard.component.scss
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/dashboard/components/container/dashboard/dashboard.component.scss
@@ -3,3 +3,12 @@
   justify-content: space-around;
   
 }
+
+.padding-lr{
+  --padding-start: var(--ion-padding, 0px);
+  --padding-end: var(--ion-padding, 0px);
+  --padding-top: var(--ion-padding, 0px);
+  --padding-bottom: var(--ion-padding, 0px);
+  padding-inline-start: var(--ion-padding, 0px);
+  padding-inline-end: var(--ion-padding, 0px);
+}
