--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-anwesenheit-control-modal/termin-anwesenheit-control-modal.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-anwesenheit-control-modal/termin-anwesenheit-control-modal.component.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-button (click)="cancel()">Zurück</ion-button>
     </ion-buttons>
-    <ion-title>Anwesenheitskontrolle</ion-title>
+    <ion-title>Anwesenheit</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="confirm()" [strong]="true"
         [disabled]="!formGroup.dirty || formGroup.invalid">Speichern</ion-button>
