--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/update-termin-modal/update-termin-modal.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/update-termin-modal/update-termin-modal.component.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-button (click)="cancel()">Zurück</ion-button>
     </ion-buttons>
-    <ion-title>Bearbeite Termin</ion-title>
+    <ion-title>Termin</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="confirm()" [strong]="true"
         [disabled]="!formGroup.dirty || formGroup.invalid">Speichern</ion-button>
@@ -22,10 +22,13 @@
             placeholder="Termin Name"></ion-input>
         </ion-item>
         <ion-item>
-          <ion-input formControlName="weitereInformationen" labelPlacement="stacked" label="Beschreibung"
-            placeholder="Termin Beschreibung"></ion-input>
+          <ion-textarea [autoGrow]="true"  formControlName="weitereInformationen" labelPlacement="stacked" label="Beschreibung"
+            placeholder="Termin Beschreibung"></ion-textarea>
         </ion-item>
         <ion-item>
+          <ion-avatar *ngIf="formGroup.get('image')!.value" slot="start">
+            <img [src]="'data:image/png;base64,' + formGroup.get('image')!.value" />
+          </ion-avatar>
           <ion-button (click)="uploadImage()">Bild hochladen</ion-button>
         </ion-item>
         <ion-item>
