--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/dashboard/components/presentational/dashboard-termin-item/dashboard-termin-item.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/dashboard/components/presentational/dashboard-termin-item/dashboard-termin-item.component.html
@@ -1,11 +1,15 @@
 <ion-item [button]="true" detail="false" (click)="emitOpenTermin()" class="default-color">
+  <div class="triangle-base" [class.auftritt]="terminArt === terminArtEnum.Auftritt"
+    [class.probe]="terminArt === terminArtEnum.Probe" [class.konzert]="terminArt === terminArtEnum.Konzert"
+    [class.freizeit]="terminArt === terminArtEnum.Freizeit" [class.reise]="terminArt === terminArtEnum.Reise"></div>
   <ion-label>
     <h2>
       <strong> {{terminName}}</strong>
     </h2>
-    <ion-text class="default-color ion-text-wrap" style="font-size: 14px; color: white;">Datum: {{terminStartTime | date: 'dd.MM.YYYY'}}: {{terminStartTime | date :
+    <ion-text class="default-color ion-text-wrap" style="font-size: 14px; color: white;">Datum: {{terminStartTime |
+      date: 'dd.MM.YYYY'}}: {{terminStartTime | date :
       'HH:mm'}}-{{terminEndTime | date : 'HH:mm'}}</ion-text><br />
-    <ion-note color="medium" class="ion-text-wrap" >
+    <ion-note color="medium" class="ion-text-wrap">
       Mein Status: <span [class.red]="(terminResponse === 'Nicht Zurückgemeldet')">{{terminResponse}}</span>
     </ion-note>
   </ion-label>
