--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-overview/termin-overview.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/termin-overview/termin-overview.component.html
@@ -11,7 +11,7 @@
       <app-termin-item *ngFor="let termin of data.terminData | selectTerminsFromDate : date.value" [terminId]="termin.terminId"
         [terminStatus]="termin.terminStatus | dropdown : data.terminStatusDropdownValues" [terminName]="termin.name"
         [terminResponse]="termin.zugesagt | dropdown : data.responseDropdownValues"
-        [terminArt]="termin.terminArt | dropdown : data.terminArtenDropdownValues" [terminStartTime]="termin.startZeit"
+        [terminArt]="termin.terminArt" [terminStartTime]="termin.startZeit"
         [terminEndTime]="termin.endZeit" [istAnwesend]="termin.istAnwesend" [highAuth]="false"
         (openTermin)="openTermin(termin.terminId)">
       </app-termin-item>
