--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/presentational/termin-item/termin-item.component.scss
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/presentational/termin-item/termin-item.component.scss
@@ -14,3 +14,29 @@
   width: 60px;
   height: 40px;
 }
+
+.triangle-base{
+  width: 5px;
+  height: calc(100% - 20px);
+  margin: 10px 10px 10px 0;
+}
+
+.auftritt{
+  background-color: #bb4b99;
+}
+
+.probe{
+  background-color: #2a9183;
+}
+
+.konzert{
+  background-color: #bb4b99;
+}
+
+.freizeit{
+  background-color: #388742;
+}
+
+.reise{
+  background-color: #388742;
+}
