--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/settings/settings.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/settings/settings.component.html
@@ -17,7 +17,7 @@
   </ion-header>
 
   <ion-list [inset]="true">
-    <ion-item button detail="true">
+    <ion-item button detail="true" (click)="changePassword()">
       <ion-icon name="key-outline" style="margin-right: 16px;"></ion-icon>
       <ion-label>
         <h2>Passwort ändern</h2>
@@ -25,7 +25,7 @@
       </ion-label>
     </ion-item>
     
-    <ion-item button detail="true">
+    <ion-item button detail="true" (click)="changeMail()">
       <ion-icon name="mail-outline" style="margin-right: 16px;"></ion-icon>
       <ion-label>
         <h2>E-Mail ändern</h2>
@@ -33,7 +33,7 @@
       </ion-label>
     </ion-item>
 
-    <ion-item button detail="true">
+    <ion-item button detail="true" (click)="deleteOwnUser()">
       <ion-icon name="trash-outline" style="margin-right: 16px; color: #e35252;"></ion-icon>
       <ion-label style="color: #e35252;">
         <h2>Account löschen</h2>
