--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/mitglieder/components/container/mitglieder-details/mitglieder-details.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/mitglieder/components/container/mitglieder-details/mitglieder-details.component.html
@@ -29,53 +29,53 @@
 
     <ion-card>
       <ion-item>
-        <ion-avatar *ngIf="res.data.image" slot="start" class="profil-img">
-          <img [src]="'data:image/png;base64,' + res.data.image" />
+        <ion-avatar *ngIf="res.orchesterMitglied.image" slot="start" class="profil-img">
+          <img [src]="'data:image/png;base64,' + res.orchesterMitglied.image" />
         </ion-avatar>
-        <h3>{{res.data.vorname + ' ' + res.data.nachname}}</h3>
+        <h3>{{res.orchesterMitglied.vorname + ' ' + res.orchesterMitglied.nachname}}</h3>
       </ion-item>
 
       <ion-card-content>
-        <div *ngIf="res.data.orchesterMitgliedsStatus || res.data.memberSince || res.data.positions">
-          <ng-container *ngIf="res.data.orchesterMitgliedsStatus">
-            Mitgliedsstatus: <span style="color: white;">{{res.data.orchesterMitgliedsStatus | dropdown :
-              res.mitgliedsStatusDropdown}}</span>
+        <div *ngIf="res.orchesterMitglied.orchesterMitgliedsStatus || res.orchesterMitglied.memberSince || res.orchesterMitglied.positions">
+          <ng-container *ngIf="res.orchesterMitglied.orchesterMitgliedsStatus">
+            Mitgliedsstatus: <span style="color: white;">{{res.orchesterMitglied.orchesterMitgliedsStatus | dropdown :
+              res.mitgliedsStatusDropdownItems}}</span>
           </ng-container>
-          <ng-container *ngIf="res.data.memberSince">
-            <br>Mitglied seit: <span style="color: white;">{{res.data.memberSince | date : 'dd.MM.YYYY'}}</span>
+          <ng-container *ngIf="res.orchesterMitglied.memberSince">
+            <br>Mitglied seit: <span style="color: white;">{{res.orchesterMitglied.memberSince | date : 'dd.MM.YYYY'}}</span>
           </ng-container>
-          <ng-container *ngIf="res.data.positions">
-            <br>Positionen: <span style="color: white;">{{res.data.positions | dropdown : res.positionDropdown}}</span>
-          </ng-container>
-        </div>
-        <div *ngIf="res.data.defaultInstrument || res.data.defaultNotenStimme" class="border-top">
-          <ng-container *ngIf="res.data.defaultInstrument">
-            Instrument: <span style="color: white;">{{res.data.defaultInstrument | dropdown :
-              res.instrumentDropdown}}</span>
-          </ng-container>
-          <ng-container *ngIf="res.data.defaultNotenStimme">
-            <br>Notenstimme: <span style="color: white;">{{res.data.defaultNotenStimme | dropdown :
-              res.notenStimmeDropdown}}</span>
+          <ng-container *ngIf="res.orchesterMitglied.positions">
+            <br>Positionen: <span style="color: white;">{{res.orchesterMitglied.positions | dropdown : res.positionDropdownItems}}</span>
           </ng-container>
         </div>
-        <div *ngIf="res.data.geburtstag" class="border-top">
-          Geburtstag: <span style="color: white;">{{res.data.geburtstag | date : 'dd.MM.YYYY'}}</span>
+        <div *ngIf="res.orchesterMitglied.defaultInstrument || res.orchesterMitglied.defaultNotenStimme" class="border-top">
+          <ng-container *ngIf="res.orchesterMitglied.defaultInstrument">
+            Instrument: <span style="color: white;">{{res.orchesterMitglied.defaultInstrument | dropdown :
+              res.instrumentDropdownItems}}</span>
+          </ng-container>
+          <ng-container *ngIf="res.orchesterMitglied.defaultNotenStimme">
+            <br>Notenstimme: <span style="color: white;">{{res.orchesterMitglied.defaultNotenStimme | dropdown :
+              res.notenstimmeDropdownItems}}</span>
+          </ng-container>
         </div>
-        <div *ngIf="res.data.adresse['straße']" class="border-top">
+        <div *ngIf="res.orchesterMitglied.geburtstag" class="border-top">
+          Geburtstag: <span style="color: white;">{{res.orchesterMitglied.geburtstag | date : 'dd.MM.YYYY'}}</span>
+        </div>
+        <div *ngIf="res.orchesterMitglied.adresse['straße']" class="border-top">
           Adresse: <br>
           <span style="color: white;">
-            {{res.data.adresse['straße']}} {{res.data.adresse.hausnummer}}, <br>
-            {{res.data.adresse.postleitzahl}}, {{res.data.adresse.stadt}} <br>
-            {{res.data.adresse.zusatz}}
+            {{res.orchesterMitglied.adresse['straße']}} {{res.orchesterMitglied.adresse.hausnummer}}, <br>
+            {{res.orchesterMitglied.adresse.postleitzahl}}, {{res.orchesterMitglied.adresse.stadt}} <br>
+            {{res.orchesterMitglied.adresse.zusatz}}
           </span>
         </div>
 
         <div class="border-top">
-          <div *ngIf="res.data.handynummer">
-            Handy: <a [href]="'tel:' + res.data.handynummer">{{res.data.handynummer}}</a>
+          <div *ngIf="res.orchesterMitglied.handynummer">
+            Handy: <a [href]="'tel:' + res.orchesterMitglied.handynummer">{{res.orchesterMitglied.handynummer}}</a>
           </div>
-          <div *ngIf="res.data.telefonnummer">
-            Telefon: <a [href]="'tel:' + res.data.telefonnummer">{{res.data.telefonnummer}}</a>
+          <div *ngIf="res.orchesterMitglied.telefonnummer">
+            Telefon: <a [href]="'tel:' + res.orchesterMitglied.telefonnummer">{{res.orchesterMitglied.telefonnummer}}</a>
           </div>
         </div>
       </ion-card-content>
@@ -86,26 +86,26 @@
       <ion-list-header color="tertiary">
         <ion-label>Persönliche Angaben</ion-label>
       </ion-list-header>
-      <app-data-item label="Name" [value]="res.data.vorname + ' ' + res.data.nachname "></app-data-item>
+      <app-data-item label="Name" [value]="res.orchesterMitglied.vorname + ' ' + res.orchesterMitglied.nachname "></app-data-item>
       <ng-container
-        *ngIf="res.data.adresse['straße'] && res.data.adresse.hausnummer && res.data.adresse.postleitzahl && res.data.adresse.stadt; else adresseNotGiven">
-        <ng-container *ngIf="res.data.adresse.zusatz; else adressWithoutAddition">
+        *ngIf="res.orchesterMitglied.adresse['straße'] && res.orchesterMitglied.adresse.hausnummer && res.orchesterMitglied.adresse.postleitzahl && res.orchesterMitglied.adresse.stadt; else adresseNotGiven">
+        <ng-container *ngIf="res.orchesterMitglied.adresse.zusatz; else adressWithoutAddition">
           <app-data-item label="Adresse"
-            [value]="res.data.adresse['straße'] + ' ' + res.data.adresse.hausnummer + ', ' + res.data.adresse.postleitzahl + ' ' + res.data.adresse.stadt + ' (' + res.data.adresse.zusatz + ')'">
+            [value]="res.orchesterMitglied.adresse['straße'] + ' ' + res.orchesterMitglied.adresse.hausnummer + ', ' + res.orchesterMitglied.adresse.postleitzahl + ' ' + res.orchesterMitglied.adresse.stadt + ' (' + res.orchesterMitglied.adresse.zusatz + ')'">
           </app-data-item>
         </ng-container>
         <ng-template #adressWithoutAddition>
           <app-data-item label="Adresse"
-            [value]="res.data.adresse['straße'] + ' ' + res.data.adresse.hausnummer + ', ' + res.data.adresse.postleitzahl + ' ' + res.data.adresse.stadt">
+            [value]="res.orchesterMitglied.adresse['straße'] + ' ' + res.orchesterMitglied.adresse.hausnummer + ', ' + res.orchesterMitglied.adresse.postleitzahl + ' ' + res.orchesterMitglied.adresse.stadt">
           </app-data-item>
         </ng-template>
       </ng-container>
       <ng-template #adresseNotGiven>
         <app-data-item label="Adresse" [value]="'Nicht angegeben'"></app-data-item>
       </ng-template>
-      <app-data-item label="Geburtstag" [value]="res.data.geburtstag | date : 'dd.MM.YYYY'"></app-data-item>
-      <app-data-item label="Telefonnummer" [value]="res.data.telefonnummer" [unknownValue]="'Nicht angegeben'"></app-data-item>
-      <app-data-item label="Handynummer" [value]="res.data.handynummer" [unknownValue]="'Nicht angegeben'"></app-data-item>
+      <app-data-item label="Geburtstag" [value]="res.orchesterMitglied.geburtstag | date : 'dd.MM.YYYY'"></app-data-item>
+      <app-data-item label="Telefonnummer" [value]="res.orchesterMitglied.telefonnummer" [unknownValue]="'Nicht angegeben'"></app-data-item>
+      <app-data-item label="Handynummer" [value]="res.orchesterMitglied.handynummer" [unknownValue]="'Nicht angegeben'"></app-data-item>
     </ion-list>
 
     <ion-list class="mg-top">
@@ -113,15 +113,15 @@
         <ion-label>Orchester Informationen</ion-label>
       </ion-list-header>
       <app-data-item label="Instrument"
-        [value]="res.data.defaultInstrument | dropdown : res.instrumentDropdown" [unknownValue]="'Nicht angegeben'"></app-data-item>
+        [value]="res.orchesterMitglied.defaultInstrument | dropdown : res.instrumentDropdown" [unknownValue]="'Nicht angegeben'"></app-data-item>
       <app-data-item label="Stimme"
-        [value]="res.data.defaultNotenStimme | dropdown : res.notenStimmeDropdown" [unknownValue]="'Nicht angegeben'"></app-data-item>
+        [value]="res.orchesterMitglied.defaultNotenStimme | dropdown : res.notenStimmeDropdown" [unknownValue]="'Nicht angegeben'"></app-data-item>
       <app-data-item label="Orchestermitglied seit"
-        [value]="res.data.memberSince | date : 'dd.MM.YYYY'" [unknownValue]="'Nicht angegeben'"></app-data-item>
+        [value]="res.orchesterMitglied.memberSince | date : 'dd.MM.YYYY'" [unknownValue]="'Nicht angegeben'"></app-data-item>
       <app-data-item label="Positionen"
-          [value]="res.data.positions | dropdown : res.positionDropdown" [unknownValue]="'Nicht angegeben'"></app-data-item>
+          [value]="res.orchesterMitglied.positions | dropdown : res.positionDropdown" [unknownValue]="'Nicht angegeben'"></app-data-item>
       <app-data-item label="Mitglieds Status"
-        [value]="res.data.orchesterMitgliedsStatus | dropdown : res.mitgliedsStatusDropdown" [unknownValue]="'Nicht angegeben'"></app-data-item>
+        [value]="res.orchesterMitglied.orchesterMitgliedsStatus | dropdown : res.mitgliedsStatusDropdown" [unknownValue]="'Nicht angegeben'"></app-data-item>
     </ion-list> -->
 
     <ion-button *ngIf="canUpdateMitglied" fill="clear" expand="block" (click)="setOpen(true)">
@@ -130,7 +130,7 @@
     <ion-action-sheet [isOpen]="isActionSheetOpen" header="Bearbeite Mitglied" [buttons]="actionSheetButtons"
       (didDismiss)="setOpen(false)"></ion-action-sheet>
 
-    <ion-fab *ngIf="getLoggedInOrchesterMitgliedsName() === res.data.vorname + ' ' + res.data.nachname" slot="fixed"
+    <ion-fab *ngIf="getLoggedInOrchesterMitgliedsName() === res.orchesterMitglied.vorname + ' ' + res.orchesterMitglied.nachname" slot="fixed"
       vertical="bottom" horizontal="end">
       <ion-fab-button class="ion-fab-button" (click)="openUpdateOrchesterMitgliedModal()">
         <ion-icon name="pencil-outline"></ion-icon>
