some bug fixes and changes

--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/authentication/components/container/registration/registration.component.scss
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/authentication/components/container/registration/registration.component.scss
@@ -27,9 +27,7 @@ ion-content {
   margin-top: 16px;
 }
 
+
 .back-to-login-button{
-  position: absolute;
-  bottom: 32px;
-  left: 0;
-  right: 0;
+  margin-top: 16px;
 }
