--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/mitglieder/components/container/mitglied-create-modal/mitglied-create-modal.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/mitglieder/components/container/mitglied-create-modal/mitglied-create-modal.component.html
@@ -28,6 +28,7 @@
             <img [src]="'data:image/png;base64,' + formGroup.get('image')!.value" />
           </ion-avatar>
           <ion-button (click)="uploadImage()">Bild hochladen</ion-button>
+          <ion-button style="margin-left: 12px;" *ngIf="formGroup.get('image')!.value" (click)="deleteCurrentImage()" [color]="'danger'">Bild löschen</ion-button>
         </ion-item>
       </ion-list>
       
