--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/update-termin-modal/update-termin-modal.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/termin/components/container/update-termin-modal/update-termin-modal.component.html
@@ -30,6 +30,7 @@
             <img [src]="'data:image/png;base64,' + formGroup.get('image')!.value" />
           </ion-avatar>
           <ion-button (click)="uploadImage()">Bild hochladen</ion-button>
+          <ion-button style="margin-left: 12px;" *ngIf="formGroup.get('image')!.value" (click)="deleteCurrentImage()" [color]="'danger'">Bild löschen</ion-button>
         </ion-item>
         <ion-item>
           <ion-select label="Termin Art" label-placement="stacked" formControlName="terminArt">
