--- a/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/user-help/user-help.component.html
+++ b/TvJahnOrchesterApp.Api/OrchesterApp.Frontend/src/app/core/components/container/user-help/user-help.component.html
@@ -41,15 +41,20 @@
     </ion-accordion>
     <ion-accordion value="second">
       <ion-item slot="header" color="light">
-        <ion-label>Frage 2</ion-label>
+        <ion-label class="ion-text-wrap">Wie kann ich die Daten auf einer Seite aktualisieren?</ion-label>
       </ion-item>
-      <div class="ion-padding" slot="content">Second Content</div>
+      <div class="ion-padding" slot="content">
+        Falls sich eine Seite der App nicht automatisch aktualisiert hat und z.B. veraltete Daten anzeigt, kann man die Seite von oben nach unten ziehen, um die Seite manuell zu aktualisieren (außer auf dieser Hilfe Seite).
+      </div>
     </ion-accordion>
     <ion-accordion value="third">
       <ion-item slot="header" color="light">
-        <ion-label>Frage 3</ion-label>
+        <ion-label class="ion-text-wrap">Wie funktioniert die Anwesenheitsliste?</ion-label>
       </ion-item>
-      <div class="ion-padding" slot="content">Third Content</div>
+      <div class="ion-padding" slot="content">
+        Die Anwesenheitsliste bezieht sich auf alle bereits vergangenen Termine des aktuellen Jahres, welche die Terminart "Auftritt", "Probe" oder "Konzert" besitzen. <br> <br>
+        Die Liste zeigt für alle nicht Vorstandsmitglieder nur die 10 ersten Einträge und den eigenen Eintrag an. D.h. wenn der eigene Eintrag nicht unter den ersten 10 Einträgen ist, wird er von anderen nicht gesehen. Die Mitglieder des Vorstands können zu jedem Zeitpunkt alle Einträge sehen.
+      </div>
     </ion-accordion>
   </ion-accordion-group>
 
