--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/termin-return-messages/termin-return-messages.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/termin-return-messages/termin-return-messages.component.html
@@ -43,7 +43,7 @@
                 <h2>
                   <strong> {{responseMessage.vorname}} {{responseMessage.nachname}}</strong>
                 </h2>
-                <ion-text class="default-color ion-text-wrap" style="font-size: 14px; color: white;">
+                <ion-text class="default-color ion-text-wrap" style="font-size: 14px;">
                   <b>Anwesenheit:</b> {{responseMessage.istAnwesend ? 'Ja' : 'Nein'}}
                 </ion-text><br />
                 <ion-note color="medium" class="ion-text-wrap">
